// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaults 1`] = `
[
  {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": {
      "labels": {
        "app.kubernetes.io/component": "-deployment",
        "app.kubernetes.io/name": "undefined-deployment",
      },
      "name": "plone-test-deployment-c86dcee1",
    },
    "spec": {
      "replicas": 2,
      "selector": {
        "matchLabels": {
          "app": "plone-test-c8667035",
        },
      },
      "template": {
        "metadata": {
          "labels": {
            "app": "plone-test-c8667035",
            "app.kubernetes.io/managed-by": "cdk8s-plone",
            "app.kubernetes.io/part-of": "plone",
          },
        },
        "spec": {
          "containers": [
            {
              "env": [],
              "envFrom": [],
              "name": "test-container",
              "resources": {
                "limits": {
                  "cpu": "1000m",
                  "memory": "1Gi",
                },
                "requests": {
                  "cpu": "200m",
                  "memory": "300Mi",
                },
              },
            },
          ],
          "imagePullSecrets": [],
        },
      },
    },
  },
]
`;

exports[`with-environment 1`] = `
[
  {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": {
      "labels": {
        "app.kubernetes.io/component": "-deployment",
        "app.kubernetes.io/name": "undefined-deployment",
      },
      "name": "plone-with_environment-deployment-c80b2568",
    },
    "spec": {
      "replicas": 2,
      "selector": {
        "matchLabels": {
          "app": "plone-with_environment-c8045a0c",
        },
      },
      "template": {
        "metadata": {
          "labels": {
            "app": "plone-with_environment-c8045a0c",
            "app.kubernetes.io/managed-by": "cdk8s-plone",
            "app.kubernetes.io/part-of": "plone",
          },
        },
        "spec": {
          "containers": [
            {
              "env": [
                {
                  "name": "MY_ENV",
                  "value": "my-value",
                },
              ],
              "envFrom": [],
              "name": "with_environment-container",
              "resources": {
                "limits": {
                  "cpu": "1000m",
                  "memory": "1Gi",
                },
                "requests": {
                  "cpu": "200m",
                  "memory": "300Mi",
                },
              },
            },
          ],
          "imagePullSecrets": [],
        },
      },
    },
  },
]
`;

exports[`with-environment-from-secret 1`] = `
[
  {
    "apiVersion": "v1",
    "immutable": false,
    "kind": "Secret",
    "metadata": {
      "name": "plone-foo-c8953a75",
    },
    "stringData": {},
  },
  {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": {
      "labels": {
        "app.kubernetes.io/component": "-deployment",
        "app.kubernetes.io/name": "undefined-deployment",
      },
      "name": "plone-with_environment_secret-deployment-c8c68046",
    },
    "spec": {
      "replicas": 2,
      "selector": {
        "matchLabels": {
          "app": "plone-with_environment_secret-c8cb976e",
        },
      },
      "template": {
        "metadata": {
          "labels": {
            "app": "plone-with_environment_secret-c8cb976e",
            "app.kubernetes.io/managed-by": "cdk8s-plone",
            "app.kubernetes.io/part-of": "plone",
          },
        },
        "spec": {
          "containers": [
            {
              "env": [],
              "envFrom": [
                {
                  "secretRef": {
                    "name": "plone-foo-c8953a75",
                  },
                },
              ],
              "name": "with_environment_secret-container",
              "resources": {
                "limits": {
                  "cpu": "1000m",
                  "memory": "1Gi",
                },
                "requests": {
                  "cpu": "200m",
                  "memory": "300Mi",
                },
              },
            },
          ],
          "imagePullSecrets": [],
        },
      },
    },
  },
]
`;

exports[`with-environment-valueFrom 1`] = `
[
  {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": {
      "labels": {
        "app.kubernetes.io/component": "-deployment",
        "app.kubernetes.io/name": "undefined-deployment",
      },
      "name": "plone-with_environment_valuefrom-deployment-c8068bfb",
    },
    "spec": {
      "replicas": 2,
      "selector": {
        "matchLabels": {
          "app": "plone-with_environment_valueFrom-c89a569b",
        },
      },
      "template": {
        "metadata": {
          "labels": {
            "app": "plone-with_environment_valueFrom-c89a569b",
            "app.kubernetes.io/managed-by": "cdk8s-plone",
            "app.kubernetes.io/part-of": "plone",
          },
        },
        "spec": {
          "containers": [
            {
              "env": [
                {
                  "name": "MY_ENV",
                  "valueFrom": {
                    "secretKeyRef": {
                      "key": "MY_ENV_SECRET",
                      "name": "my-secret",
                    },
                  },
                },
              ],
              "envFrom": [],
              "name": "with_environment_valueFrom-container",
              "resources": {
                "limits": {
                  "cpu": "1000m",
                  "memory": "1Gi",
                },
                "requests": {
                  "cpu": "200m",
                  "memory": "300Mi",
                },
              },
            },
          ],
          "imagePullSecrets": [],
        },
      },
    },
  },
]
`;

exports[`with-pdp 1`] = `
[
  {
    "apiVersion": "apps/v1",
    "kind": "Deployment",
    "metadata": {
      "labels": {
        "app.kubernetes.io/component": "-deployment",
        "app.kubernetes.io/name": "undefined-deployment",
      },
      "name": "plone-with_pdb-deployment-c87b10de",
    },
    "spec": {
      "replicas": 2,
      "selector": {
        "matchLabels": {
          "app": "plone-with_pdb-c80f43fe",
        },
      },
      "template": {
        "metadata": {
          "labels": {
            "app": "plone-with_pdb-c80f43fe",
            "app.kubernetes.io/managed-by": "cdk8s-plone",
            "app.kubernetes.io/part-of": "plone",
          },
        },
        "spec": {
          "containers": [
            {
              "env": [],
              "envFrom": [],
              "name": "with_pdb-container",
              "resources": {
                "limits": {
                  "cpu": "1000m",
                  "memory": "1Gi",
                },
                "requests": {
                  "cpu": "200m",
                  "memory": "300Mi",
                },
              },
            },
          ],
          "imagePullSecrets": [],
        },
      },
    },
  },
  {
    "apiVersion": "policy/v1",
    "kind": "PodDisruptionBudget",
    "metadata": {
      "labels": {
        "app.kubernetes.io/managed-by": "cdk8s-plone",
        "app.kubernetes.io/part-of": "plone",
      },
      "name": "plone-with_pdb-pdb-c8380749",
    },
    "spec": {
      "minAvailable": 1,
      "selector": {
        "matchLabels": {
          "app": "plone-with_pdb-c80f43fe",
        },
      },
    },
  },
]
`;
